--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,67 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+*,
+html {
+    padding: 0;
+    margin: 0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+html,
+body,
+#root,
+.App,
+.App>div {
+    height: 100%;
+    background-color: #010101;
+    overflow: hidden;
+    /* Hide scrollbars */
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+#game {
+    height: 100%;
+    background-color: #010101;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#playerJoin {
+    height: 100%;
+}
+
+#homePageContainer {
+    height: 100%;
+}
+
+#homePage {
+    position: relative;
+    top: 50%;
+    /* // shifts or translate the center point (X, Y) by (X - 50% of outerWidth, Y - 50% of outerHeight) */
+    transform: translate(0, -50%);
+    aspect-ratio: 16/9;
+    max-width: 100vw;
+    max-height: 100vh;
+    /*center myself*/
+    margin: auto;
+}
+
+#creatingRoom {
+    color: #ffffff;
+}
+
+#playerSelectGameText {
+    /* box-shadow: 0 0 0 0 rgba(0, 0, 0, 1); */
+    transform: scale(1);
+    animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+    }
+    70% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0.95);
+    }
 }
